# proof-of-residency

./: .gitignore  README.md
prover/: .gitignore  Cargo.toml
prover/elf/: riscv32im-succinct-zkvm-elf
prover/lib/: Cargo.toml
prover/lib/src/: lib.rs  portugal.rs
prover/program/: Cargo.toml
prover/program/src/: main.rs
prover/script/: Cargo.toml
prover/script/src/: config.rs  handlers.rs  hyle.rs  lib.rs  pdf_base64.rs  proof_service.rs  types.rs
prover/server/: Cargo.toml  build.rs
prover/server/src/: config.rs  error.rs  handlers.rs  lib.rs  proof_service.rs  types.rs
server/: .env.example  .gitignore  Cargo.toml  README.md
server/src/: cleanup.rs  config.rs  error.rs  handlers.rs  main.rs  models.rs  server_manager.rs
web/: api.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/components/: FileUpload.tsx
web/app/utils/: cosmos.ts  hyle.ts  network.ts
