[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.12", features = ["macros", "fs", "rt-multi-thread"] }
warp = "0.3"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3", default-features = false }
bytes = "1.0"
sp1-sdk = "3.0.0"
prover-lib = { path = "../prover/lib" }
hyle_contract = { git = "https://github.com/hyle-org/hyle-cosmos.git", branch = "main" }

[build-dependencies]
sp1-helper = "3.0.0"