[package]
version = "0.1.0"
name = "prover-script"
edition = "2021"
default-run = "prover"

[[bin]]
name = "prover"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = "3.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
tokio = { version = "1.12", features = ["macros", "fs", "rt-multi-thread"] }
warp = "0.3"
futures = { version = "0.3", default-features = false }
bytes = "1.0"
base64 = "0.22.1"
hyle_contract = { git = "https://github.com/hyle-org/hyle-cosmos.git", branch = "main" }
async-std = "1.13.0"

[build-dependencies]
sp1-helper = "3.0.0"
