[package]
version = "0.1.0"
name = "prover-server"
edition = "2021"
default-run = "prover"

[[bin]]
name = "prover"
path = "src/bin/main.rs"

[dependencies]
# Server-specific dependencies
tokio = { version = "1.12", features = ["macros", "fs", "rt-multi-thread"] }
warp = "0.3"
sp1-sdk = "3.0.0"
futures = { version = "0.3", default-features = false }
bytes = "1.0"
tracing = "0.1.41"
thiserror = "2.0.6"
async-trait = "0.1.83"
base64 = "0.22.1"

# Shared dependencies from workspace
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
sp1-helper = "3.4.0"
